Updated authentication content.

--- a/docs/docs/authentication.mdx
+++ b/docs/docs/authentication.mdx
@@ -5,11 +5,11 @@ sidebar_label: Authentication
 
 # Authentication
 
-In Fabriq, we are using authentication for either Firebase or Cognito.
+In Fabriq, we use authentication through either Firebase or Cognito.
 
 ## Firebase Authentication
 
-1.For Firebase authentication, we need to add Firebase credentials to the environment (env) file. The required credentials are listed below:
+1.To enable Firebase authentication, add the necessary Firebase credentials to the environment (env) file as listed below:
 
 ```shell
 REACT_APP_FIREBASE_API_KEY=xxx
@@ -22,12 +22,12 @@ REACT_APP_FIREBASE_MESSAGING_SENDERID=xxx
 
 Please ensure that you replace `xxx` with the actual values for each credential.
 
-2.Declare the environment variables within the initialize function in the client.js file. Ensure that Firebase is imported above this declaration. Please refer to the example code below:
+2.Inside the initialize function in the 'client.js' file, declare the environment variables. Make sure to import Firebase above this declaration. Refer to the provided example code below:
 
 ```shell
-initialize() {
-    import firebase from 'firebase'; // Import Firebase before using it
+import firebase from 'firebase'; // Import Firebase before using it
 
+initialize() {
     const firebaseConfig = {
       apiKey: process.env.REACT_APP_FIREBASE_API_KEY,
       authDomain: process.env.REACT_APP_FIREBASE_AUTH_DOMAIN,
@@ -41,12 +41,12 @@ initialize() {
 }
 ```
 
-Make sure to import the firebase module before using it in the function, and then use the imported module to initialize Firebase and set the necessary configuration.
+Ensure that you import the Firebase module before utilizing it within the function. Then, employ the imported module to initialize Firebase and configure it as needed.
 
-3.Please review and confirm the login_page.js file. Inside the onLogin function, the Firebase API is used for authentication. The function sends the user's email and password for authentication, and it subsequently returns the result. The authentication process involves using `UserApi.login(data.email, data.password)`.
+3.Please review and confirm the 'login_page.js' file. Within the 'onLogin' function, Firebase API is utilized for authentication. The function sends the user's email and password for authentication and subsequently returns the result. The authentication process involves the use of 'UserApi.login(data.email, data.password)'.
 
 ## Cognito Authentication
-1.For Cognito authentication, we need to add Cognito credentials to the environment (env) file. The required credentials are listed below:
+1.To enable Cognito authentication, add the necessary Cognito credentials to the environment (env) file as listed below:
 
 ```shell
 REACT_APP_COGNITO_CLIENT_ID=xxx
@@ -57,7 +57,11 @@ REACT_APP_CLAIM_NAME=xxx
 ```
 Please ensure that you replace `xxx` with the actual values for each credential.
 
-2.Declare the environment variables within the initialize function in the client.js file. Ensure that Firebase is imported above this declaration. Please refer to the example code below:
+Ensure you import the Amplify module before using it in the function.
+Then, utilize the imported module to initialize Amplify and configure it with the necessary settings.
+```import { Amplify } from "aws-amplify"```
+
+2.Inside the initialize function in the client.js file, declare the environment variables. Please refer to the example code below:
 
 ```shell
   const cognitoConfig = {
@@ -70,7 +74,7 @@ Please ensure that you replace `xxx` with the actual values for each credential.
     tokenScopes: ["openid", "email", "profile", "aws.cognito.signin.user.admin"]
   };
 
-  
+  // Configure Amplify with Cognito settings
   Amplify.configure({
     Auth: {
       userPoolId: cognitoConfig.userPool,
@@ -86,8 +90,5 @@ Please ensure that you replace `xxx` with the actual values for each credential.
     }
   });
 ```
-
-Make sure to import the Amplify module before using it in the function, and then use the imported module to initialize Amplify and set the necessary configuration.
-```import { Amplify } from "aws-amplify```
 
 3.Please review and confirm the login_page.js file. Inside the onLogin function, the Amplify API is used for authentication. The function sends the user's email and password for authentication, and it subsequently returns the result. The authentication process involves using `AmplifyApi.signin(data.email, data.password)`.
