--- a/docs/docs/connectors/instagram.mdx
+++ b/docs/docs/connectors/instagram.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 3
+sidebar_position: 5
 sidebar_label: Instagram
 ---
 
@@ -13,13 +13,13 @@ Ensure that your Instagram business account is connected to your Facebook page.
 
 ### Configuration
 
-1. Start by clicking **"Connect"** to initiate the OAuth process. Once the OAuth process is successfully completed, a select box will be automatically updated with the current value.
+1. Start by clicking **Connect** to initiate the OAuth process. Once the OAuth process is successfully completed, a select box will be automatically updated with the current value.
 
 2. Next, log in and authorize your Instagram account.
 
 3. Select a start date to specify the beginning of your data collection.
 
-4. Finally, click **"Continue"** to proceed with the configuration.
+4. Finally, click **Continue** to proceed with the configuration.
 
 By following these steps and updating the necessary details in the Fabriq UI, you can successfully create the Instagram source connector for your account.
 
