--- a/docs/docs/connectors/youtube.mdx
+++ b/docs/docs/connectors/youtube.mdx
@@ -1,5 +1,5 @@
 ---
-sidebar_position: 4
+sidebar_position: 8
 sidebar_label: Youtube Analytics
 ---
 
@@ -11,11 +11,11 @@ The report will be available within 48 hours of creating the reporting job and w
 
 ### Configuration
 
-1. Start by clicking **"Connect"** to initiate the OAuth process. Once the OAuth process is successfully completed, a select box will be automatically updated with the current value.
+1. Start by clicking **Connect** to initiate the OAuth process. Once the OAuth process is successfully completed, a select box will be automatically updated with the current value.
 
 2. Next, log in and authorize your Instagram account.
 
-3. Finally, click **"Continue"** to proceed with the configuration.
+3. Finally, click **Continue** to proceed with the configuration.
 
 By following these steps and updating the necessary details in the Fabriq UI, you can successfully create the Youtube source connector for your account.
 
