Docs: Content and images updated

--- a/docs/docs/connectors/facebook_marketing.mdx
+++ b/docs/docs/connectors/facebook_marketing.mdx
@@ -27,4 +27,4 @@ The connector currently uses OAuth 2.0 for authentication. Follow these steps:
 
 By following these steps and updating the necessary details in the Fabriq UI, you can successfully create the Facebook Marketing source connector for your account.
 
-![Facebook Marketing Image](/img/facebook_marketing.png)
+![Facebook Marketing Image](/img/facebook_marketing_.png)
