--- a/docs/docs/connectors/facebook_page.mdx
+++ b/docs/docs/connectors/facebook_page.mdx
@@ -7,32 +7,15 @@ sidebar_label: Facebook Pages
 
 This page contains the setup guide and reference information for the Facebook Pages source connector.
 
-### Prerequisite
-
-Ensure that you've created your Facebook Application and have access to both a long-lived Page access token and a Facebook Page ID as part of the process.
-
-### Set up Facebook Pages
-
-1. Create Facebook Developer Account. Follow <a class="custom-link" href="https://developers.facebook.com/apps/?_gl=1*r5a54j*_ga*NzMzNjA3ODEwLjE2ODE4MTgzMzQ.*_ga_EDX3TPP6H7*MTY5NzExMjM1My43My4xLjE2OTcxMTM1MzIuMC4wLjA">instruction</a> to create one.
-2. Create <a class="custom-link" href="https://developers.facebook.com/apps/?_gl=1*r5a54j*_ga*NzMzNjA3ODEwLjE2ODE4MTgzMzQ.*_ga_EDX3TPP6H7*MTY5NzExMjM1My43My4xLjE2OTcxMTM1MzIuMC4wLjA">Facebook App</a> Choose **Company** as the purpose of the app. Fill out the remaining fields to create your app, then follow along the **Connect a User Page** section.
-3. Connect a User <a class="custom-link" href="https://developers.facebook.com/tools/explorer/">Page</a>. Choose your app at Meta App field. Choose your Page at User or Page field. Add next permission:
-    - pages_read_engagement
-    - pages_read_user_content
-    - pages_show_list
-    - read_insights
-4. Click **Generate Access Token** and follow instructions.
-5. <a class="custom-link" href="https://developers.facebook.com/docs/facebook-login/guides/access-tokens/get-long-lived#get-a-long-lived-user-access-token">Generate</a> Long-Lived User Access Token.
-6. <a class="custom-link" href="https://developers.facebook.com/docs/facebook-login/guides/access-tokens/get-long-lived#long-lived-page-token">Generate</a> Long-Lived Page Token.
- 
-
 ### Configuration
 
 1. Click the **Connect** button to authenticate your Facebook account. In the pop-up, select the appropriate Facebook account, and click **Continue** to proceed.
 
-2. Enter the **Page ID**. If you have a page URL like `https://www.facebook.com/Test-1111111111`, the Page ID should be Test-1111111111.
+2. Enter the **Page ID**. If you have a page URL like `https://www.facebook.com/1111111111`, the Page ID should be 1111111111.
 
 3. Finally, click **Continue** to proceed with the configuration.
 
 By following these steps and updating the necessary details in the Fabriq UI, you can successfully create the Facebook Pages source connector for your account.
+
 
 ![Facebook Page Image](/img/facebook_page.png)
