--- a/docs/docs/connectors/google_ads.mdx
+++ b/docs/docs/connectors/google_ads.mdx
@@ -15,7 +15,7 @@ Ensure you have a Google Ads account linked to a Google Ads Manager account.
 
 1. Click the **Connect** button to authenticate your Google Ads account. In the pop-up, select the appropriate Google account, and click **Continue** to proceed.
 
-2. Enter a comma-separated list of the **Customer ID(s)** for your account. These IDs are 10-digit numbers that uniquely identify your account. To find your Customer ID, [click here](https://support.google.com/google-ads/answer/1704344?_gl=1*11hymcs*_ga*MTAyMzEzNzY4OS4xNjk2ODM5NDkw*_ga_EDX3TPP6H7*MTY5NzA5NzYyMi4xNi4xLjE2OTcwOTc2MzguMC4wLjA).
+2. Enter a comma-separated list of the **Customer ID(s)** for your account. These IDs are 10-digit numbers that uniquely identify your account. To find your Customer ID, <a class="custom-link" href="https://support.google.com/google-ads/answer/1704344?_gl=1*11hymcs*_ga*MTAyMzEzNzY4OS4xNjk2ODM5NDkw*_ga_EDX3TPP6H7*MTY5NzA5NzYyMi4xNi4xLjE2OTcwOTc2MzguMC4wLjA">Click here</a>.
 
 3. Finally, click **Continue** to proceed with the configuration.
 
