Changes in toolbar docs.

--- a/docs/docs/Toolbar/toolbar-configuration.mdx
+++ b/docs/docs/Toolbar/toolbar-configuration.mdx
@@ -33,7 +33,7 @@ Need to create a new tag for the toolbar setup.
 
 ```
     <div id="toolbar"></div>
-    <script src="https://magical-llama-dc4ab0.netlify.app/main.js"></script>
+    <script src="https://storage.googleapis.com/static-getfabriq-com/main.js"></script>
 ```
 - Under ** Triggering ** choose the trigger that you previously created for Toolbar.
 - Provide a name for the variable and click on  ** Save ** to save the tag configuration.
